# Hobby-Projects

./: Dockerfile  Makefile  README.md  debug_script.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Go-Cli-Task-Manager/: docker-compose.yml  go.mod  go.sum  main.go
Go-Cli-Task-Manager/cmd/: add.go  details.go  list.go  root.go
Go-Cli-Task-Manager/models/: dbSetup.go  tasks.go
Real-Time-Monitoring-Dashboard/: README.md  docker-compose.yml  es_index_generator.py  kafka_consumer.py  kafka_producer.py  main.py  pyproject.toml
Real-Time-Monitoring-Dashboard/kafka/: kafka_consumer.py  kafka_producer.py
apps/account/: admin.py  apps.py  managers.py  models.py  validators.py
apps/account/management/commands/: create_superuser.py
apps/account/migrations/: 0001_initial.py
config/: settings.py
config/settings/: __init__.py  database_configs.py  environment_variables.py  installed_apps_configs.py  internationalization_configs.py  static_files_config.py  template_configs.py
